@@ -1,6 +1,6 @@
 
 host foo_included {
-  fixed-address 10.19.83.99;
-  hardware ethernet 00:11:22:33:44:55;
+    fixed-address 10.19.83.99;
+    hardware ethernet 00:11:22:33:44:55;
 }
 
