@@ -2,6 +2,9 @@ Revision history for Net-ISC-DHCPd
 
 0.08
        - Add (RT59816) support for "include ...;"
+         generate() can either flatten includes or just print the
+         "include" statement. parsing of includes is a manual
+         operation.
          Contributor: napetrov
        - Change filehandle is replaced with _filehandle
        - Change attributes holding a file is changed from Str
